--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "output-static",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Filter of static files requests",
   "main": "index.js",
+  "dependencies": {
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "demo": "cd _demo && node server"
   },
   "repository": {
     "type": "git",
@@ -20,7 +24,4 @@
     "url": "https://github.com/German-Stepanov/nodejs-output-static/issues"
   },
   "homepage": "https://github.com/German-Stepanov/nodejs-output-static#readme",
-  "dependencies": {
-    "output-view": "^1.0.5"
-  }
 }
