--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.2",
   "description": "Filter of static files requests",
   "main": "index.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
