--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
   "bugs": {
     "url": "https://github.com/German-Stepanov/nodejs-output-static/issues"
   },
-  "homepage": "https://github.com/German-Stepanov/nodejs-output-static#readme",
+  "homepage": "https://github.com/German-Stepanov/nodejs-output-static#readme"
 }
